# solitaire

./: LICENSE  README.md  pyproject.toml
src/models/: card.py
src/solitaire/: main.py
src/solitaire/models/: board.py  card.py  color.py  deck.py  suit.py
src/tests/: test_card.py
tests/: test_board.py  test_card.py  test_deck.py  test_moves.py  test_stock_logic.py
