[tool.poetry]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=solitaire --cov-report=term-missing"

[tool.coverage.run]
source = ["src/solitaire"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[project]
name = "solitaire"
version = "0.1.0"
description = "Just an implementation of solitaire to play for fun."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame-ce (>=2.5.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov"
]
